# quantfin-case-study-var

./: README.md  blanknotebook.ipynb  main.py  pyproject.toml
src/: data_loader.py  risk_metrics.py
