[tool.poetry]
name = "python_project_template"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.3"
pytest = "^8.4.2"
matplotlib = "^3.10.6"
numpy = "^2.3.3"
scikit-learn = "^1.7.2"
notebook = "^7.4.6"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.mansory.api"